--- a/index.html
+++ b/index.html
@@ -591,7 +591,40 @@
                     </div>
                 </div>
                 <div class="portfolio-wrap">
-                    <div class="row">
+                    <div class="row portfolio-slider">
+                        <div class="col-lg-4 col-md-6 col-12">
+                            <div class="portfolio-item">
+                                <div class="portfolio-img">
+                                    <img src="assets/images/protfolio/1.jpg" alt="">
+                                    <div class="portfolio-text">
+                                        <h3><a href="#">Creative Architecture</a></h3>
+                                        <span> Building Engineering</span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-lg-4 col-md-6 col-12">
+                            <div class="portfolio-item">
+                                <div class="portfolio-img">
+                                    <img src="assets/images/protfolio/2.jpg" alt="">
+                                    <div class="portfolio-text">
+                                        <h3><a href="#">Modern Architecture</a></h3>
+                                        <span> Building Engineering</span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-lg-4 col-md-6 col-12">
+                            <div class="portfolio-item">
+                                <div class="portfolio-img">
+                                    <img src="assets/images/protfolio/3.jpg" alt="">
+                                    <div class="portfolio-text">
+                                        <h3><a href="#">House Old Architecture</a></h3>
+                                        <span> Building Engineering</span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                         <div class="col-lg-4 col-md-6 col-12">
                             <div class="portfolio-item">
                                 <div class="portfolio-img">
@@ -690,6 +723,7 @@
                                         </div>
                                     </div>
                                 </li>
+                                
                             </ul>
                         </div>
                     </div>
