--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@
         <section class="wpo-site-about-section">
             <div class="container">
                 <div class="about-wrap">
-                    <div class="row">
+                    <div class="row align-items-center">
                         <div class="col-lg-5 col-12 order-lg-1 order-2">
                             <div class="about-left">
                                 <img src="assets/images/about.jpg" alt="">
@@ -352,7 +352,9 @@
                                 <p>Lorem Ipsum and simply dummy text
                                     the printing and typesetting industry has
                                     been standard text printer.</p>
-                                <a href="#" class="theme-btn-s2">VIEW DETAILS</a>
+                                    <div class="service-btn">
+                                        <a href="#" class="theme-btn-s2">VIEW DETAILS</a>
+                                    </div>
                             </div>
                         </div>
                         <div class="col-lg-4 col-md-6 col-12">
@@ -362,7 +364,9 @@
                                 <p>Lorem Ipsum and simply dummy text
                                     the printing and typesetting industry has
                                     been standard text printer.</p>
-                                <a href="#" class="theme-btn-s2">VIEW DETAILS</a>
+                                    <div class="service-btn">
+                                        <a href="#" class="theme-btn-s2">VIEW DETAILS</a>
+                                    </div>
                             </div>
                         </div>
                         <div class="col-lg-4 col-md-6 col-12">
@@ -372,7 +376,9 @@
                                 <p>Lorem Ipsum and simply dummy text
                                     the printing and typesetting industry has
                                     been standard text printer.</p>
-                                <a href="#" class="theme-btn-s2">VIEW DETAILS</a>
+                                    <div class="service-btn">
+                                        <a href="#" class="theme-btn-s2">VIEW DETAILS</a>
+                                    </div>
                             </div>
                         </div>
                     </div>
@@ -383,7 +389,7 @@
         <!-- start wpo-skill-section -->
         <section class="wpo-skill-section section-padding">
             <div class="container">
-                <div class="row">
+                <div class="row align-items-center">
                     <div class="col-lg-6 col-md-6 col-12">
                         <div class="trusted-title">
                             <div class="wpo-section-title">
@@ -445,7 +451,7 @@
         <section class="wpo-site-team-section section-padding">
             <div class="container">
                 <div class="team-wrap">
-                    <div class="row">
+                    <div class="row align-items-center">
                         <div class="col-lg-7 col-md-12 order-lg-1 order-2">
                             <div class="team-left">
                                 <div class="row">
@@ -495,9 +501,9 @@
                                     and scrambled it to make a type specimen book. It has survived not
                                     electronic remaining unchanged.
                                 </p>
-                                <span>Lorem Ipsum has been the industry's and standard dummy text
+                                <p class="team-p-bttom">Lorem Ipsum has been the industry's and standard dummy text
                                     ever since the 1500s, when an unknown printer took a galley of type
-                                    scrambled it to make a type specimen book.</span>
+                                    scrambled it to make a type specimen book.</p>
                                 <div class="join-btn">
                                     <a href="#" class="theme-btn">
                                         <button class="btn-5"><span>JOIN WITH US</span></button>
@@ -575,7 +581,7 @@
         <section class="wpo-site-portfolio-section section-padding">
             <div class="container">
                 <div class="portfolio-title">
-                    <div class="row">
+                    <div class="row align-items-center">
                         <div class="col-lg-6 col-md-8 col-12">
                             <div class="wpo-section-title">
                                 <span>- OUR PORTFOLIO -</span>
